@@ -39,6 +39,9 @@ ECL 8.9.0:
  - In Unix-type systems, ECL now installs with a "soname" and using versioned
    directory names, such as /usr/lib/ecl-8.9.0, /usr/lib/libecl.so.8.9, etc
 
+ - New configuration flag, --without-fpe, to disable floating point exception
+   code in platforms that have buggy implementations of feenableexcept().
+
 * Bugs fixed:
 
  - The optimizer for COERCE might enter an infinite loop for certain
